Avoid page break in introduction grid when printing

--- a/css/index.css
+++ b/css/index.css
@@ -1127,7 +1127,7 @@ section {
         break-inside: avoid;
     }
 
-    .figure--tech-stack, .card {
+    .grid--introduction, .figure--tech-stack, .card {
         break-inside: avoid;
     }
 
